fix(yalb-980): adjust component-width for some components and add alignment for text

--- a/components/02-molecules/image/_yds-content-image.scss
+++ b/components/02-molecules/image/_yds-content-image.scss
@@ -2,4 +2,8 @@
 
 .content-image {
   @include tokens.spacing-page-inner;
+
+  img {
+    width: 100%;
+  }
 }
